# binius

.github/workflows/: ci.yml
crates/circuits/src/: acc_blake3.rs  lib.rs  plain_lookup.rs  provide_require.rs  sha256.rs  unconstrained.rs
crates/circuits/src/arithmetic/: u32.rs
crates/core/src/protocols/gkr_gpa/gpa_sumcheck/: prove.rs
crates/core/src/protocols/sumcheck/prove/: regular_sumcheck.rs
examples/: Cargo.toml  acc-constants.rs  acc-disjoint-product.rs  acc-eq-ind-partial-eval.rs  acc-linear-combination-with-offset.rs  acc-linear-combination-with-offset.rs.disabled  acc-linear-combination.rs  acc-multilinear-extension-transparent.rs  acc-packed.rs  acc-permutation-channels.rs  acc-powers.rs  acc-projected.rs  acc-repeated.rs  acc-ro-memory.rs  acc-select-row.rs  acc-shift-ind-partial-eq.rs  acc-shifted.rs  acc-step-down.rs  acc-step-up.rs  acc-tower-basis.rs  acc-zeropadded.rs
