[package]
name = "examples"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
alloy-primitives.workspace = true
binius_circuits = { path = "../crates/circuits" }
binius_core = { path = "../crates/core" }
binius_field = { path = "../crates/field" }
binius_hal = { path = "../crates/hal" }
binius_hash = { path = "../crates/hash" }
binius_macros = { path = "../crates/macros" }
binius_math = { path = "../crates/math" }
binius_utils = { path = "../crates/utils", default-features = false }
bytemuck.workspace = true
bumpalo.workspace = true
bytesize.workspace = true
clap = { version = "4.5.20", features = ["derive"] }
groestl_crypto.workspace = true
itertools.workspace = true
rand.workspace = true
tracing-profile.workspace = true
tracing.workspace = true

[[example]]
name = "groestl_circuit"
path = "groestl_circuit.rs"

[[example]]
name = "keccakf_circuit"
path = "keccakf_circuit.rs"

[[example]]
name = "u8mul"
path = "u8mul.rs"

[[example]]
name = "u32add_with_lookup"
path = "u32add_with_lookup.rs"

[[example]]
name = "modular_mul"
path = "modular_mul.rs"

[[example]]
name = "vision32b_circuit"
path = "vision32b_circuit.rs"

[[example]]
name = "sha256_circuit"
path = "sha256_circuit.rs"

[[example]]
name = "sha256_circuit_with_lookup"
path = "sha256_circuit_with_lookup.rs"

[[example]]
name = "collatz"
path = "collatz.rs"

[[example]]
name = "u32_add"
path = "u32_add.rs"

[[example]]
name = "u32_mul"
path = "u32_mul.rs"

[[example]]
name = "bitwise_ops"
path = "bitwise_ops.rs"

[[example]]
name = "b32_mul"
path = "b32_mul.rs"

[[example]]
name = "acc-linear-combination"
path = "acc-linear-combination.rs"

[[example]]
name = "acc-linear-combination-with-offset"
path = "acc-linear-combination-with-offset.rs"

[[example]]
name = "acc-shifted"
path = "acc-shifted.rs"

[[example]]
name = "acc-packed"
path = "acc-packed.rs"

[[example]]
name = "acc-projected"
path = "acc-projected.rs"

[[example]]
name = "acc-repeated"
path = "acc-repeated.rs"

[[example]]
name = "acc-zeropadded"
path = "acc-zeropadded.rs"

[[example]]
name = "acc-powers"
path = "acc-powers.rs"

[[example]]
name = "acc-constants"
path = "acc-constants.rs"

[[example]]
name = "acc-disjoint-product"
path = "acc-disjoint-product.rs"

[[example]]
name = "acc-eq-ind-partial-eval"
path = "acc-eq-ind-partial-eval.rs"

[[example]]
name = "acc-multilinear-extension-transparent"
path = "acc-multilinear-extension-transparent.rs"

[[example]]
name = "acc-select-row"
path = "acc-select-row.rs"

[[example]]
name = "acc-shift-ind-partial-eq"
path = "acc-shift-ind-partial-eq.rs"

[[example]]
name = "acc-step-down"
path = "acc-step-down.rs"

[[example]]
name = "acc-step-up"
path = "acc-step-up.rs"

[[example]]
name = "acc-tower-basis"
path = "acc-tower-basis.rs"

[lints.clippy]
needless_range_loop = "allow"

[features]
default = ["rayon"]
aes-tower = []
bail_panic = ["binius_utils/bail_panic"]
fp-tower = []
rayon = ["binius_utils/rayon"]

